# code_PortalWeb_self

./: README.md
backend/: .gitignore  main.py  pyproject.toml  test.py
backend/application/: __init__.py  middleware.py  schemas.py  settings.py
backend/application/apps/common/: views.py
backend/application/apps/users/: models.py  scheams.py  test.py  utils.py  views.py
backend/application/core/: schemas.py  settings.py
backend/application/database/: redis.py
backend/application/utils/: aliyunclound.py  comm_tool.py  exception_tool.py  exceptions.py  logs.py  redis_tool.py  response.py
backend/migrations/models/: 0_20250103103047_init.py  1_20250103103146_update.py  2_20250103103237_update.py
frontend/: .env.development  .env.production  .gitignore  eslint.config.js  index.html  jsconfig.json  package.json  vite.config.mjs
frontend/public/: Thumbs.db
frontend/src/: App.vue  main.js
frontend/src/components/: AppFooter.vue  FileUpload.vue  JsonEditor.vue  Tools.vue
frontend/src/layouts/: default.vue
frontend/src/pages/: App.vue  Index.vue  NotFound.vue
frontend/src/plugins/: index.js  vuetify.js
frontend/src/router/: index.js
frontend/src/service/: index.js
frontend/src/service/config/: index.js
frontend/src/service/modules/: tools.js
frontend/src/service/requests/: index.js
frontend/src/stores/: index.js
frontend/src/stores/modules/: tools.js
frontend/src/utils/: appSonner.js  cache.js  constant.js
