[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["sobermh"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
python-dotenv = "^1.0.1"
aerich = "^0.8.1"
passlib = "^1.7.4"
requests = "^2.32.3"
bcrypt = "^4.2.1"
redis = "^5.2.1"
alibabacloud-dysmsapi20170525 = "3.1.1"
jwt = "^1.3.1"
python-jose = "^3.3.0"

[tool.poetry.dependencies.tortoise-orm]
extras = ["aiomysql"]
version = "^0.23.0"

[tool.aerich]
tortoise_orm = "application.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
